--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -21,3 +21,38 @@ h2 {
 }
 
 /* npm I react-router-dom@5.3.0 */
+
+/* carousel */
+.carousel-item-next,
+.carousel-item-prev,
+.carousel-item.active {
+  display: flex;
+}
+
+.carousel-caption {
+  position: absolute;
+  top: 0;
+  padding: 10px;
+  box-sizing: border-box;
+}
+
+.carousel-caption h2 {
+  color: #fff;
+}
+
+.carousel .carousel-item a img {
+  height: 300px;
+  padding: 40px;
+  border-radius: 50%;
+  margin: 40px auto 40px auto;
+}
+
+.carousel a {
+  margin: 0 auto;
+}
+
+@media (max-width: 900px) {
+  .carousel-caption h2 {
+    font-size: 2.5vw;
+  }
+}
