--- a/frontend/src/style/modStyle/index.css
+++ b/frontend/src/style/modStyle/index.css
@@ -12,6 +12,7 @@ font-family: 'Noto Sans Mono', monospace;
 /* Global  */
 html {
   overflow-x: hidden;
+  /* scroll-behavior: smooth; */
 }
 
 * {
